--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
                             <h1 class="mt-0 mb-16 reveal-from-top" data-reveal-delay="150">Alchemy Exchange</h1>
                             <div class="container-xs"><p class="m-0 mb-32 reveal-from-top subtitle" data-reveal-delay="300">Introducing Alchemy Exchange - The worlds first <br>decentralized advertising exchange</p></div>
                         </div>
-                    
-                    <div class="hero-figure reveal-from-bottom" data-reveal-delay="600">
+
+
+
+                    <!--GLOBE-->
+                    <div id="desktop-globe" class="hero-figure reveal-from-bottom" data-reveal-delay="600">
                         <!-- <img src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615398383/globe_2_wijoyr.png" alt="Hero image" width="896" height="504"> -->
                         <div class="center">
                             <div class="circle pulse">
@@ -99,6 +102,26 @@
                             </div>
                         </div>
                     </div>
+                    <!--GLOBE-->
+
+                                        <!--GLOBE-->
+                                        <div id="mobile-globe" class="hero-figure reveal-from-bottom" data-reveal-delay="600">
+                                            <!-- <img src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615398383/globe_2_wijoyr.png" alt="Hero image" width="896" height="504"> -->
+                                            <div class="center">
+                                                <div class="circle pulse">
+                                                    <div class="circle pulseyy">
+                                                         <img src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615458228/Group_30_ibl6o0.png"
+                                                         alt="Hero image" width="350" height="350">                                                      
+                                                    </div>   
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!--GLOBE-->
+
+
+
+
+
 
 
 
@@ -195,9 +218,9 @@
 
                             <!-- <form name="submit-to-google-sheet" id="my-form"> -->
                                 <form method="post" action="form.php" name="contact" method="POST" data-netlify="true">
-                                    <label><input id="name" name="name" type="text" placeholder="First Name" required></label>
-                                    <label><input id="lastname" name="lastname" type="text" placeholder="Last Name" required></label>
-                                    <label><input id="email" name="email" type="email" placeholder="Email" required></label>
+                                    <label><input id="name" name="name" type="text" placeholder="First Name *" required></label>
+                                    <label><input id="lastname" name="lastname" type="text" placeholder="Last Name *" required></label>
+                                    <label><input id="email" name="email" type="email" placeholder="Email *" required></label>
                                     <label><textarea id="message" placeholder="Message" type="message" type="email" name="message"></textarea></label>
                                 <button class="press" type="submit">Send</button>
                               </form> 
