--- a/index.html
+++ b/index.html
@@ -218,6 +218,8 @@
                     
                     </div></div></div></section>
 
+                    <section class="contact-anchor"></section>
+
 
                     <section id="contact" class="contact section center-content">
                         <h2 class="mt-0 mb-16 reveal-from-bottom contact" data-reveal-delay="300">How can we help you?</h2>
