--- a/index.html
+++ b/index.html
@@ -149,17 +149,17 @@
                 <div class="block-one">
                     <img src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615397655/ben_xjcme8.png"/>
                     <p class="name">Ben Putley</p>
-                    <p class="title">CEO & Cofounder</p>
+                    <p class="title">CEO & Co-founder</p>
                 </div>
                 <div class="block-two">
-                    <img src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615397655/ben_xjcme8.png"/>
-                    <p class="name">Ben Putley</p>
-                    <p class="title">CEO & Cofounder</p>
+                    <img src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615465997/chroley_atotoj.png"/>
+                    <p class="name">Adam Chorley</p>
+                    <p class="title">CFO & Co-founder</p>
                 </div>
                 <div class="block-three">
-                    <img src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615397655/ben_xjcme8.png"/>
-                    <p class="name">Ben Putley</p>
-                    <p class="title">CEO & Cofounder</p>
+                    <img src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615465997/neil_g2lppp.png"/>
+                    <p class="name">Neil Bruce</p>
+                    <p class="title">COO & Co-founder</p>
                 </div>
                 </div>
                 <div class="row-one reveal-from-bottom" data-reveal-delay="300">
