--- a/index.html
+++ b/index.html
@@ -147,17 +147,21 @@
                 
                 <div class="row-three reveal-from-bottom" data-reveal-delay="300">
                 <div class="block-one">
-                    <img src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615397655/ben_xjcme8.png"/>
+                    <!-- <img class="background" src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615469073/Group_1_dhrrmj.svg"/> -->
+                    <img src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615469766/ben-wide-2_der3o8.png"/>
+                    <!-- <img src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615397655/ben_xjcme8.png"/> -->
                     <p class="name">Ben Putley</p>
                     <p class="title">CEO & Co-founder</p>
                 </div>
                 <div class="block-two">
-                    <img src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615465997/chroley_atotoj.png"/>
+                    <img src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615469719/chorley-wide_lraejn.png"/>
+                    <!-- <img src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615465997/chroley_atotoj.png"/> -->
                     <p class="name">Adam Chorley</p>
                     <p class="title">CFO & Co-founder</p>
                 </div>
                 <div class="block-three">
-                    <img src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615465997/neil_g2lppp.png"/>
+                    <img src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615469720/niel-wide_boowhj.png"/>
+                    <!-- <img src="https://res.cloudinary.com/mselbekk-com/image/upload/v1615465997/neil_g2lppp.png"/> -->
                     <p class="name">Neil Bruce</p>
                     <p class="title">COO & Co-founder</p>
                 </div>
